# PTA-PAT

PAT/: CMakeLists.txt
PAT/src/: 1001_a+b_format.cc  1002_s+b_for_polynomials.cc  1003_emergency.cc  1004_counting_leaves.cc  1005_spell_it_right.cc  1006_sign_in_and_sign_out.cc  1007_maximum_subsequence_sum.cc  1008_elevator.cc  1009_product_of_polynomials.cc  1010_radix.cc  1011_world_cup_betting.cc  1012_the_best_rank.cc  1013_battle_over_cities.cc  1014_waiting_in_Line.cc  1015_reversible_primes.cc  1016_phone_bills.cc  1017_queueing_at_bank.cc  1018_public_bike_management.cc  1019_general_palindromic_number.cc  1020_tree_traversals.cc  1021_deepest_root.cc  1022_digital_library.cc  1023_have_fun_with_numbers.cc  1024_palindromic_number.cc  1025_pat_ranking.cc  1027_colors_in_mars.cc  1028_list_sorting.cc  1029_median.cc  1030_travel_plan.cc  1031_hello_world_for_u.cc  1032_sharing.cc  1033_to_fill_or_not_to_fill.cc  1034_head_of_a_gang.cc  1035_password.cc  1036_boys_vs_girls.cc  1037_magic_coupon.cc  1038_recover_the_smallest_number.cc  1039_course_list_for_student.cc  1040_longest_symmetric_string.cc  1041_be_unique.cc  (+82 more)
PAT/test/: main.cpp
src/: AAddBAndC.java  AAndBInHogwarts.java  AcuteStroke.java  AllRoadsLeadToRome.java  AreTheyEqual.java  BFS.java  BeUnique.java  BoysVsGirls.java  BrokenKeyboard.java  BuildABinarySearchTree.java  CarsOnCampus.java  ChainTheRopes.java  ColorsInMars.java  ComeOnLetsC.java  CompleteBinarySearchTree.java  CompleteBinaryTree.java  ConsecutiveFactors.java  CountPATs.java  CountingNodesInABST.java  CountingOnes.java  CourseListForStudent.java  CutInteger.java  DFS.java  DamnSingle.java  Dating.java  DeduplicationOnALinkedList.java  DeepestRoot.java  DigitalLibrary.java  Dijkstra.java  EddingtonNumber.java  EulerianPath.java  FavoriteColorStripe.java  FindCoins.java  FindMoreCoins.java  FindingAverage.java  ForwardsOnWeibo.java  FriendNumbers.java  GeneralPalindromicNumber.java  GeneratePrimes.java  GraduateAdmission.java  (+83 more)
src/util/: Graph.java  Read.java
