cmake_minimum_required(VERSION 3.14)
project(PAT)

set(CMAKE_CXX_STANDARD 14)

add_executable(test test/main.cpp)
add_executable(1060_are_they_equal src/1060_are_they_equal.cc)
add_executable(1025_pat_ranking src/1025_pat_ranking.cc)
add_executable(1070_mooncake src/1070_mooncake.cc)
add_executable(1069_the_black_hole_of_numbers src/1069_the_black_hole_of_numbers.cc)
add_executable(1020_tree_traversals src/1020_tree_traversals.cc)
add_executable(1086_tree_traversals_again src/1086_tree_traversals_again.cc)
add_executable(1102_invert_a_binary_tree src/1102_invert_a_binary_tree.cc)
add_executable(1090_highest_price_in_supply_chain src/1090_highest_price_in_supply_chain.cc)
add_executable(1079_total_sales_of_supply_chain src/1079_total_sales_of_supply_chain.cc)
add_executable(1094_the_largest_generation.cc src/1094_the_largest_generation.cc)
add_executable(1004_counting_leaves src/1004_counting_leaves.cc)
add_executable(1053_path_of_equal_weight src/1053_path_of_equal_weight.cc)
add_executable(1043_is_it_a_binary_search_tree src/1043_is_it_a_binary_search_tree.cc)
add_executable(1064_complete_binary_search_tree src/1064_complete_binary_search_tree.cc)
add_executable(1099_build_a_binary_search_tree src/1099_build_a_binary_search_tree.cc)
add_executable(1066_root_of_avl_tree src/1066_root_of_avl_tree.cc)
add_executable(1107_social_clusters src/1107_social_clusters.cc)
add_executable(1013_battle_over_cities src/1013_battle_over_cities.cc)
add_executable(1021_deepest_root src/1021_deepest_root.cc)
add_executable(1076_forwards_on_weibo src/1076_forwards_on_weibo.cc)
add_executable(1003_emergency src/1003_emergency.cc)
add_executable(1018_public_bike_management src/1018_public_bike_management.cc)
add_executable(1030_travel_plan src/1030_travel_plan.cc)
add_executable(1072_gas_station src/1072_gas_station.cc)
add_executable(1087_all_roads_lead_to_rome src/1087_all_roads_lead_to_rome.cc)